--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,46 @@
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+/* Home.css */
 
-}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+    /*background-image: url("");*/
+    min-height: 100vh;
+  }
+  
+  h1 {
+    color: #333; /* Dark gray color for the title */
+    margin-bottom: 20px;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  button {
+    background-color: #007bff; /* Bootstrap primary button color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    border-radius: 10px;
+  }
+  
+  button:hover {
+    background-color: #0056b3; /* Slightly darker blue on hover */
+  }
+  
+  button a {
+    text-decoration: none;
+    color: white;
+  }
+  
+  button:focus {
+    outline: none;
+  }
