--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -1,7 +1,22 @@
 .Contact{
-    margin: 1.5%;
-    position:fixed;
-    border: 1.5px solid;
-    padding: 2px;
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    /* width: 100%; */
+    height: 200px;
+    color: white;
     
+}
+
+.contactDiv{
+    text-align: center;
+    box-sizing: border-box;
+    width: 900px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
 }
