--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     /* width: 100%; */
-    height: 200px;
+    height:500px;
     color: white;
     
 }
@@ -19,4 +19,24 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
+}
+
+
+@media only screen and (max-width: 500px) {
+    .Contact{
+        height: auto;gap: 0;
+    }
+    .contactDiv {
+        width: 90%; 
+        height:500px;
+        margin-top: 150px;
+        gap: 0;
+        flex-direction: column; /* Stack items vertically */
+    }
+    .contactDiv{
+        width: auto;
+        gap: 0;
+        height: auto;
+        margin: 0;
+    }
 }
